--- a/index.html
+++ b/index.html
@@ -48,14 +48,17 @@
           </div>
           <div class="card">
             <img src="./images/retail.jpg">
+            <div class="centered">COMING SOON</div>
             <a href="#retail" class="card-text">Retail</a>
           </div>
           <div class="card">
             <img src="./images/bank.jpg">
+            <div class="centered">COMING SOON</div>
             <a href="#bank" class="card-text">Bank</a>
           </div>
           <div class="card">
             <img src="./images/doctor.jpg">
+            <div class="centered">COMING SOON</div>
             <a href="#doctor" class="card-text">Doctor</a>
           </div>
         </div>
@@ -63,27 +66,27 @@
     </div>
     <div class="favourites">
       <div class="container">
-        <h1 class="display-4">Recently Visited Queues</h1>
+        <h1 class="display-4">Top 4 Fast Foods</h1>
         <div class="row">
           <div class="card">
-            <img src="./images/babygap.jpg">
-            <a href="#baby-gap" class="card-text">Baby Gap</a>
-            <p>Baby &bullet; Clothing &bullet; $$</p>
+            <img src="./images/bk.jpg">
+            <a href="#baby-gap" class="card-text">Burger King</a>
+            <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
-            <img src="./images/seoul.jpg">
-            <a href="#seoul-delights" class="card-text">Seoul Delights</a>
-            <p>Korean &bullet; Casual &bullet; $$</p>
+            <img src="./images/mcd.jpg">
+            <a href="#seoul-delights" class="card-text">McDonalds</a>
+            <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
-            <img src="./images/sneakers.jpg">
-            <a href="#sneaker-heads" class="card-text">Sneaker Geeks</a>
-            <p>Street &bullet; Casual &bullet; $$</p>
+            <img src="./images/wendys.png">
+            <a href="#sneaker-heads" class="card-text">Wendy's</a>
+            <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
-            <img src="./images/books.jpg">
-            <a href="#chapters" class="card-text">Reading Jocks</a>
-            <p>Library &bullet; Quiet &bullet; $</p>
+            <img src="./images/subway.jpeg">
+            <a href="#chapters" class="card-text">Subway</a>
+            <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
         </div>
       </div>
