--- a/account-settings.html
+++ b/account-settings.html
@@ -40,7 +40,7 @@
                     <input type="text" id="email" name="email"><br>
                     <label for="pnumber">Phone Number:</label><br>
                     <input type="text" id="pnumber" name="pnumber"><br><br>
-                    <button type="button" id="finish" class="btn btn-outline-success">Finish</button>
+                    <button type="button" id="finish" class="btn btn-outline-success">Update</button>
             </div>
         </div>
     </div>
