--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="greeting">
           <h1>Good morning, <span id="username">Sarah</span></h1>
           <div class="profile-container"><a href="profile.html"><img class="profile"
-              src="https://i.mdel.net/i/db/2018/1/829928/829928-500w.jpg"></a>
+                src="https://i.mdel.net/i/db/2018/1/829928/829928-500w.jpg"></a>
           </div>
         </div>
       </div>
@@ -69,23 +69,23 @@
         <h1 class="display-4">Top 4 Fast Foods</h1>
         <div class="row">
           <div class="card">
-            <img src="./images/bk.jpg">
+            <img src="./images/burger.jpg">
             <a href="#baby-gap" class="card-text">Burger King</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
-            <img src="./images/mcd.jpg">
+            <img src="./images/mcd.jpg" class="rest-pic">
             <a href="#seoul-delights" class="card-text">McDonalds</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
-            <img src="./images/wendys.png">
+            <img src="./images/we.jpg">
             <a href="#sneaker-heads" class="card-text">Wendy's</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
-            <img src="./images/subway.jpeg">
-            <a href="#chapters" class="card-text">Subway</a>
+            <img src="./images/aw.jpg">
+            <a href="#chapters" class="card-text">A&W</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
         </div>
@@ -141,15 +141,16 @@
     <!--------------------------------------------------------------------->
     <script src="scripts/blah.js"></script>
 
-</body>
-<div class="container">
-  <div class="navbar">
-    <div class="skeleton">
-      <a href="index.html"><i class="fa fa-home"></i></a>
-      <a href="qrcode.html"><i class="fa fa-qrcode"></i></a>
-      <a href="#business"><i class="fa fa-suitcase"></i></a>
+    <div class="container">
+      <div class="navbar">
+        <div class="skeleton">
+          <a href="index.html"><i class="fa fa-home"></i></a>
+          <a href="qrcode.html"><i class="fa fa-qrcode"></i></a>
+          <a href="#business"><i class="fa fa-suitcase"></i></a>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</body>
 
 </html>
