--- a/main.html
+++ b/main.html
@@ -94,14 +94,24 @@
                     .then(function (snap) { //get collection
                         snap.forEach(function (doc) { //cycle thru them
                             var RestaurantName = doc.data().name; //get the name, create DOM with id
-                            console.log(RestaurantName)
+                            var id = doc.id;
                             //$("#webcams-go-here").append("<h1 id='" + doc.id + "'> " + name + "</h1>");
                             console.log(`testing ${RestaurantName}`)
-                            $('#restaurant_goes_here').append(`<p> ${RestaurantName} </p>`);
+                            $('#restaurant_goes_here').append(`<p id= "${doc.id}"> ${RestaurantName} </p>`);
+                            addRestaurantlistener(id);
                         })
                     })
             }
             displayRestaurants();
+        }
+
+        function addRestaurantlistener(id) {
+            document.getElementById(id)
+                .addEventListener("click", function () {
+                    console.log(id + "was clicked!")
+                    //window.location.href="details.html";
+                    window.location.href = "details.html?id=" + id;
+                });
         }
     </script>
 </body>
