--- a/index.html
+++ b/index.html
@@ -70,22 +70,22 @@
         <div class="row">
           <div class="card">
             <img src="./images/burger.jpg">
-            <a href="#baby-gap" class="card-text">Burger King</a>
+            <a href="/details.html?id=BurgerKing" class="card-text">Burger King</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
             <img src="./images/mcd.jpg" class="rest-pic">
-            <a href="#seoul-delights" class="card-text">McDonalds</a>
+            <a href="/details.html?id=McDonalds" class="card-text">McDonalds</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
             <img src="./images/we.jpg">
-            <a href="#sneaker-heads" class="card-text">Wendy's</a>
+            <a href="/details.html?id=Wendys" class="card-text">Wendy's</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
           <div class="card">
             <img src="./images/aw.jpg">
-            <a href="#chapters" class="card-text">A&W</a>
+            <a href="details.html?id=A&W" class="card-text">A&W</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
         </div>
