--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="favourites">
       <div class="container">
-        <h1 class="display-4">Top 4 Fast Foods</h1>
+        <h1 class="display-4">Top Fast Food</h1>
         <div class="row">
           <div class="card">
             <img src="./images/burger.jpg">
@@ -85,7 +85,7 @@
           </div>
           <div class="card">
             <img src="./images/aw.jpg">
-            <a href="details.html?id=A&W" class="card-text">A&W</a>
+            <a href="/details.html?id=A&W" class="card-text">A&W</a>
             <p>Burger &bullet; Fastfood &bullet; $</p>
           </div>
         </div>
@@ -95,27 +95,27 @@
 
     <div class="favourites">
       <div class="container">
-        <h1 class="display-4">Your Favourite Queues</h1>
+        <h1 class="display-4">Top Sit-Down Restaurants</h1>
         <div class="row">
           <div class="card">
-            <img src="./images/babygap.jpg">
-            <a href="#baby-gap" class="card-text">Baby Gap</a>
-            <p>Baby &bullet; Clothing &bullet; $$</p>
+            <img src="https://d1ralsognjng37.cloudfront.net/5333490a-8936-4a1f-a972-04e9e5eec55a.jpeg">
+            <a href="/details.html?id=La%20Pache%20Pizza" class="card-text">La Pache Pizza</a>
+            <p>Pizza &bullet; Sit-Down &bullet; $$</p>
           </div>
           <div class="card">
-            <img src="./images/seoul.jpg">
-            <a href="#seoul-delights" class="card-text">Seoul Delights</a>
-            <p>Korean &bullet; Casual &bullet; $$</p>
+            <img src="https://www.vmcdn.ca/f/files/glaciermedia/import/lmp-all/1095607-we-botc-miku-2410.jpg;w=1200;h=800;mode=crop">
+            <a href="/details.html?id=Miku%20Sushi" class="card-text">Miku Sushi</a>
+            <p>Sushi &bullet; Sit-Down &bullet; $$</p>
           </div>
           <div class="card">
-            <img src="./images/sneakers.jpg">
-            <a href="#sneaker-heads" class="card-text">Sneaker Geeks</a>
-            <p>Street &bullet; Casual &bullet; $$</p>
+            <img src="https://restaurants-static.skipthedishes.com/images/resized/item-55c22a3dc49811b6b5a7.jpg">
+            <a href="/details.html?id=Momo%20Sushi%20Bidwell" class="card-text">Momo Sushi Bidwell</a>
+            <p>Sushi &bullet; Sit-Down &bullet; $$</p>
           </div>
           <div class="card">
-            <img src="./images/books.jpg">
-            <a href="#chapters" class="card-text">Reading Jocks</a>
-            <p>Library &bullet; Quiet &bullet; $</p>
+            <img src="https://d1ralsognjng37.cloudfront.net/b0d52a44-ac22-4eba-9c2a-1cf9dce5ea64.jpeg">
+            <a href="/details.html?id=Tom%20Sushi" class="card-text">Tom Sushi</a>
+            <p>Sushi &bullet; Sit-Down &bullet; $</p>
           </div>
         </div>
       </div>
