--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
           </div>
           <div class="card">
             <img src="./images/retail.jpg">
-            <div class="centered">COMING SOON</div>
+            <!-- <div class="centered">COMING SOON</div> -->
             <a href="#retail" class="card-text">Retail</a>
           </div>
           <div class="card">
             <img src="./images/bank.jpg">
-            <div class="centered">COMING SOON</div>
+            <!-- <div class="centered">COMING SOON</div> -->
             <a href="#bank" class="card-text">Bank</a>
           </div>
           <div class="card">
             <img src="./images/doctor.jpg">
-            <div class="centered">COMING SOON</div>
+            <!-- <div class="centered">COMING SOON</div> -->
             <a href="#doctor" class="card-text">Doctor</a>
           </div>
         </div>
@@ -145,8 +145,8 @@
       <div class="navbar">
         <div class="skeleton">
           <a href="index.html"><i class="fa fa-home"></i></a>
-          <a href="qrcode.html"><i class="fa fa-qrcode"></i></a>
-          <a href="#business"><i class="fa fa-suitcase"></i></a>
+          <!-- <a href="qrcode.html"><i class="fa fa-qrcode"></i></a> -->
+          <!-- <a href="#business"><i class="fa fa-suitcase"></i></a> -->
         </div>
       </div>
     </div>
