--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
                 <img src="https://i.mdel.net/i/db/2018/1/829928/829928-500w.jpg">
                 <h1><span id="username"></span></h1>
                 <p class="title"><span id="email"></span></p>
-                <p><span id="number">xxx-xxx-xxxx</span></p>
+                <p><span id="number"></span></p>
                 <p><a href="account-settings.html"><button>Update</button></a></p>
             </div>
         </div>
