--- a/details.html
+++ b/details.html
@@ -164,8 +164,8 @@
     <div class="navbar">
         <div class="skeleton">
             <a href="index.html"><i class="fa fa-home"></i></a>
-            <a href="qrcode.html"><i class="fa fa-qrcode"></i></a>
-            <a href="#business"><i class="fa fa-suitcase"></i></a>
+            <!-- <a href="qrcode.html"><i class="fa fa-qrcode"></i></a>
+            <a href="#business"><i class="fa fa-suitcase"></i></a> -->
         </div>
     </div>
 </div>
